# app/controllers/stocks_controller.ts
@@ -1,6 +1,12 @@
 import ResponseErrorHandler from '#exceptions/response';
 import StockService from '#services/stock_service';
 import { StatusCodeEnum } from '#types/response';
+import {
+  StockItemCreatedDto,
+  StockItemCreateDto,
+  StockItemDataDto,
+  StockItemSummaryDto,
+} from '#types/stock';
 import { createStockValidator } from '#validators/stock';
 import { inject } from '@adonisjs/core';
 import type { HttpContext } from '@adonisjs/core/http';
@@ -10,14 +16,16 @@ export default class StocksController {
   constructor(private stockService: StockService) {}
 
   async index({ response }: HttpContext) {
-    const stocks = await this.stockService.fetchAvailableStock();
+    const stocks: Array<StockItemSummaryDto> = await this.stockService.fetchAvailableStock();
 
     return response.ok(stocks);
   }
 
   async show({ params, response }: HttpContext) {
     try {
-      const singleStockItem = await this.stockService.fetchSingleStockItem(params.itemId);
+      const singleStockItem: StockItemDataDto = await this.stockService.fetchSingleStockItem(
+        params.itemId
+      );
       return response.ok(singleStockItem);
     } catch (error) {
       return new ResponseErrorHandler().handleError(response, StatusCodeEnum.NotFound, error);
@@ -26,11 +34,11 @@ export default class StocksController {
 
   async store({ request, response }: HttpContext) {
     // Admin middleware ensures only admins can reach this point
-    const singleStockItem = await request.validateUsing(createStockValidator);
+    const singleStockItem: StockItemCreateDto = await request.validateUsing(createStockValidator);
     try {
-      const createdSingleStockItemId =
+      const createdSingleStockItemId: StockItemCreatedDto =
         await this.stockService.createSingleItemStock(singleStockItem);
-      return response.created({ itemId: createdSingleStockItemId });
+      return response.created(createdSingleStockItemId);
     } catch (e) {
       return new ResponseErrorHandler().handleError(response, StatusCodeEnum.BadRequest, e);
     }
