# app/controllers/users_controller.ts
@@ -2,7 +2,7 @@ import ResponseErrorHandler from '#exceptions/response';
 import UserPolicy from '#policies/user_policy';
 import UserService from '#services/user_service';
 import { StatusCodeEnum } from '#types/response';
-import { UserData } from '#types/user';
+import { UserCreatedDto, UserCreateDto, UserData } from '#types/user';
 import { createUserValidator, updateUserValidator } from '#validators/user';
 import { inject } from '@adonisjs/core';
 import type { HttpContext } from '@adonisjs/core/http';
@@ -10,16 +10,12 @@ import type { HttpContext } from '@adonisjs/core/http';
 @inject()
 export default class UsersController {
   constructor(private userService: UserService) {}
-
-  /**
-   * create new user
-   * POST /users
-   */
+  //TODO: Add tests for UsersController to achieve 100% coverage and check edge cases. Needs to be cheked if email uniqueness is handled properly. Also verify that error handling works as expected (error responses should use class ResponseErrorHandler).
   async store({ request, response }: HttpContext) {
-    const validatedUserData = await request.validateUsing(createUserValidator);
+    const validatedUserData: UserCreateDto = await request.validateUsing(createUserValidator);
     try {
-      const createdUser = await this.userService.createUser(validatedUserData);
-      return response.created({ userId: createdUser.userId });
+      const createdUser: UserCreatedDto = await this.userService.createUser(validatedUserData);
+      return response.created(createdUser);
     } catch (e) {
       return new ResponseErrorHandler().handleError(response, StatusCodeEnum.BadRequest, e);
     }
@@ -28,11 +24,12 @@ export default class UsersController {
   async index({ auth, bouncer, response }: HttpContext) {
     // User middleware ensures authentication, so auth.user is guaranteed to exist
     if (await bouncer.with(UserPolicy).denies('view')) {
-      return response.forbidden();
+      return new ResponseErrorHandler().handleError(response, StatusCodeEnum.Forbidden, {
+        message: 'You are not authorized to view this resource',
+      });
     }
 
-    const userService = new UserService();
-    const userData: UserData = await userService.fetchUserData(auth.user!.uuid);
+    const userData: UserData = await this.userService.fetchUserData(auth.user!.uuid);
 
     return response.ok(userData);
   }
@@ -40,13 +37,17 @@ export default class UsersController {
   async update({ auth, bouncer, request, response }: HttpContext) {
     // User middleware ensures authentication, so auth.user is guaranteed to exist
     if (await bouncer.with(UserPolicy).denies('edit')) {
-      return response.forbidden();
+      return new ResponseErrorHandler().handleError(response, StatusCodeEnum.Forbidden, {
+        message: 'You are not authorized to edit this resource',
+      });
     }
 
     try {
       const validatedUserData = await request.validateUsing(updateUserValidator);
       if (!validatedUserData.firstName && !validatedUserData.lastName) {
-        return response.badRequest();
+        return new ResponseErrorHandler().handleError(response, StatusCodeEnum.BadRequest, {
+          message: 'At least one of firstName or lastName must be provided',
+        });
       }
       const updatedUserData: Partial<UserData> = { userId: auth.user!.uuid, ...validatedUserData };
       await this.userService.updateUser(updatedUserData);
