# docs/openapi.yaml
@@ -10,6 +10,8 @@ info:
     
     ## Supported Countries
     The system supports the following European countries: AT, BE, CH, DE, DK, ES, FI, FR, GB, IE, IT, NL, NO, PL, PT, SE
+    ## Supported Currencies
+    The system supports the following European currencies which are related to supported countries: EUR, CHF, DKK, GBP, NOK, PLN, SEK
   version: "1.0.0"
   contact:
     name: ShopCore API Support
@@ -55,6 +57,26 @@ components:
       description: ISO 3166-1 alpha-2 country codes supported by the system
       enum: ["AT", "BE", "CH", "DE", "DK", "ES", "FI", "FR", "GB", "IE", "IT", "NL", "NO", "PL", "PT", "SE"]
       example: "PL"
+    CurrencyCode:
+      type: string
+      description: ISO 4217 currency codes supported by the system, corresponding to supported countries
+      enum: ["EUR", "CHF", "DKK", "GBP", "NOK", "PLN", "SEK"]
+      example: "PLN"
+    DeliveryMethod:
+      type: string
+      enum: ["PICKUP_POINT", "HOME_DELIVERY"]
+    OrderStatus:
+      type: string
+      description: Possible statuses for order
+      enum: ["WAITING_FOR_PAYMENT", "NEW", "PROCESSING", "COMPLETED", "SENT", "ON_THE_WAY", "DELIVERED", "DELIVERED_PICKUP_POINT", "CANCELED", "ON_HOLD", "RETURNED", "FAILED_DELIVERY", "RETURN_TO_SENDER"]
+      example: "PROCESSING"
+    CustomerType:
+      type: string
+      enum: ["PERSON", "COMPANY"]
+    PaymentMethod:
+      type: string
+      enum: ["BANK_TRANSFER", "COD"]
+
 
     Address:
       type: object
@@ -105,8 +127,7 @@ components:
           nullable: true
           description: 'required for customerType == COMPANY; optional for person'
         customerType:
-          type: string
-          enum: ["PERSON", "COMPANY"]
+           $ref: '#/components/schemas/CustomerType' 
         address:
           type: object
           $ref: '#/components/schemas/Address'
@@ -186,6 +207,7 @@ components:
           type: string
           format: date-time
           description: expiration date and time
+
     StockPhoto:
       type: object
       required:
@@ -196,7 +218,25 @@ components:
         name:
           type: string
           nullable: true
-    StockFetchResponse:
+
+    StockItemSummaryDto:
+      type: object
+      properties:
+        itemId:
+          type: string
+        name:
+          type: string
+        price:
+          type: number
+          format: double
+        priceCurrency:
+          $ref: '#/components/schemas/CurrencyCode'
+        availableQty:
+          type: number
+        thumbnail:
+          $ref: '#/components/schemas/StockPhoto'
+
+    StockItemDataDto:
       type: object
       properties:
         itemId:
@@ -205,8 +245,7 @@ components:
           type: number
           format: double
         priceCurrency:
-          type: string
-          enum: ["PLN", "EUR"]
+          $ref: '#/components/schemas/CurrencyCode'
         vatAmount:
           type: number
           format: double
@@ -226,7 +265,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/StockPhoto'
-    StockCreateRequest:
+
+    StockItemCreateDto:
       type: object
       required:
         - price
@@ -246,8 +286,7 @@ components:
           format: double
           description: 'gross price'
         priceCurrency:
-          type: string
-          enum: ["PLN", "EUR"]
+          $ref: '#/components/schemas/CurrencyCode'
           description: 'price currency'
         vatAmount:
           type: number
@@ -289,11 +328,73 @@ components:
             name: "Front view"
           - url: "https://example.com/photo2.jpg"
             name: "Back view"
-    StockCreatedResponse:
+    StockItemCreatedDto:
       type: object
       properties:
         itemId:
           type: string
+
+    DeliveryData:
+      type: object
+      required:
+        - courier
+        - method
+        - deliveryPrice
+        - deliveryCurrency
+      properties:
+        courier:
+          type: string
+        method:
+          $ref: '#/components/schemas/DeliveryMethod'
+        pickupPointId:
+          type: string
+          description: "required when address does not exist"
+        address:
+          type: object
+          $ref: '#/components/schemas/Address'
+          description: "required when pickupPointId does not exist"
+        additionalNote:
+          type: string
+          description: "additional information for delivery"
+        deliveryPrice:
+          type: number
+          format: double
+        deliveryVatRate:
+          type: number
+          format: double
+        deliveryCurrency:
+          $ref: '#/components/schemas/CurrencyCode'
+    OrderSummaryDto:
+      type: object
+      properties:
+        orderId:
+          type: string
+          format: uuid
+        status:
+          $ref: '#/components/schemas/OrderStatus'
+        itemsCount:
+          type: number
+          format: int
+          example: 2
+        totalAmount:
+          type: number
+          format: double
+          example: 30.99
+        courier:
+          type: string
+          example: "GLOBAL COURIER INC"
+        paymentMethod:
+          $ref: '#/components/schemas/PaymentMethod'
+        deliveryMethod:
+          $ref: '#/components/schemas/DeliveryMethod'
+        currency:
+          $ref: '#/components/schemas/CurrencyCode'
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
     OrderSku:
       type: object
       properties:
@@ -306,21 +407,37 @@ components:
         itemPrice:
           type: number
           format: double
-        currency: 
-          type: string
-          enum: ["PLN", "EUR"]
+        currency:
+          $ref: '#/components/schemas/CurrencyCode'
         vatAmount:
           type: number
           format: double
         vatRate:
           type: number
           format: double
-    Order:
+    OrderDataDto:
       type: object
       properties:
         orderId:
           type: string
           format: uuid
+        firstName:
+          type: string
+        lastName:
+          type: string
+        companyName:
+          type: string
+        email:
+          type: string
+        phoneNumber:
+          type: string
+        paymentMethod:
+          $ref: '#/components/schemas/PaymentMethod'
+        status:
+          $ref: '#/components/schemas/OrderStatus'
+        delivery:
+          type: object
+          $ref: '#/components/schemas/DeliveryData'
         details:
           type: array
           items:
@@ -328,25 +445,67 @@ components:
         createdAt:
           type: string
           format: date-time
-    OrderCreate:
+    OrderCreateRequestDto:
       type: object
       required:
         - items
+        - email
+        - phoneNumber
+        - delivery
+        - paymentMethod
       properties:
+        firstName:
+          type: string
+          description: 'Required when companyName is not provided'
+        lastName:
+          type: string
+          description: 'Required when companyName is not provided'
+        companyName:
+          type: string
+          description: 'Required when firstName and lastName are not provided'
+        email:
+          type: string
+        phoneNumber:
+          type: string
+        paymentMethod:
+          $ref: '#/components/schemas/PaymentMethod'
+        delivery:
+          type: object
+          $ref: '#/components/schemas/DeliveryData'
         items:
           type: array
           items:
             $ref: '#/components/schemas/OrderSku'
       example:
+        firstName: "John"
+        lastName: "Doe"
+        email: "j.doe@example.com"
+        phoneNumber: "1-473-223-4290"
+        paymentMethod: "BANK_TRANSFER"
+        delivery:
+          courier: "GLOBAL COURIER INC"
+          method: "PICKUP_POINT"
+          additionalNote: "pin code 1234"
+          deliveryPrice: 9
+          currency: "EUR"
         items:
           - itemId: "abc123"
             itemName: "Blue T-Shirt"
             qty: 2
             itemPrice: 29.99
-            currency: "PLN"
+            currency: "EUR"
             vatAmount: 5.98
             vatRate: 0.23
-
+    OrderCreatedDto:
+      type: object
+      properties:
+        orderId:
+          type: string
+          format: uui
+        details:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderSku'
 paths:
   /api/auth/token:
       post:
@@ -407,6 +566,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserCreateResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '422':
           description: Validation error
           content:
@@ -429,10 +594,24 @@ paths:
       responses:
         '204':
           description: User updated
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '401':
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '403':
           description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '422':
           description: Validation error
           content:
@@ -515,7 +694,7 @@ paths:
         '204':
           description: 'Customer invoice data has been updated'
         '400':
-          description: Invoice customer data does not exists for related user
+          description: Invoice customer data does not exist for related user
           content:
             application/json:
               schema:
@@ -541,7 +720,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/StockFetchResponse'
+                  $ref: '#/components/schemas/StockItemSummaryDto'
       
     post:
       tags:
@@ -555,14 +734,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/StockCreateRequest'
+              $ref: '#/components/schemas/StockItemCreateDto'
       responses:
         '201':
           description: Stock created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StockCreatedResponse'
+                $ref: '#/components/schemas/StockItemCreatedDto'
         '400':
           description: Provided itemId already exists or stock creation error
           content:
@@ -571,8 +750,16 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         '401':
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '403':
           description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '422':
           description: Validation error
           content:
@@ -597,7 +784,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StockFetchResponse'
+                $ref: '#/components/schemas/StockItemDataDto'
         '404':
           description: Stock item not found
           content:
@@ -608,8 +795,8 @@ paths:
     get:
       tags:
         - orders
-      summary: List orders
-      description: Returns a list of orders for the authenticated user
+      summary: List orders summarry
+      description: Returns a list of orders summary for the authenticated user
       security:
         - bearerAuth: []
       responses:
@@ -620,11 +807,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Order'
+                  $ref: '#/components/schemas/OrderSummaryDto'
         '401':
           description: Unauthorized
-        '403':
-          description: Forbidden
     post:
       tags:
         - orders
@@ -637,18 +822,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/OrderCreate'
+              $ref: '#/components/schemas/OrderCreateRequestDto'
       responses:
         '201':
           description: Order created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/OrderCreatedDto'
         '401':
           description: Unauthorized
-        '403':
-          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '422':
           description: Validation error
           content:
@@ -675,15 +862,16 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/OrderDataDto'
         '401':
           description: Unauthorized
-        '403':
-          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '404':
           description: Order not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
- 
